[package]
name = "adsb"
version = "0.1.0"
edition = "2021"

[lib]
name = "beast"
path = "src/lib/beast.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls", "cookies"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
scraper = "0.16.0"
lazy_static = "1.4.0"
calamine = { version = "0.19.1", features = ["dates"] }
hex = "0.4.3"
adsb_deku = { version = "0.6.3"}
futures = "0.3.28"

tonic = "0.9.2"
prost = "0.11.9"
hex-literal = "0.4.1"

[build-dependencies]
tonic-build = "0.9.2"
